css and service worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "name": "Story Books - Snowclub Projects",
     "icons": [
       {
-        "src": "https://cdn.iconscout.com/icon/premium/png-512-thumb/storybook-4-1116281.png",
+        "src": "https://cdn3.iconfinder.com/data/icons/education-3-7/48/106-512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
